# archetype-rust-axon

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  setenv-sample.sh
docker/: docker-compose-template.yml  docker-compose-up.sh
docker/api/: Dockerfile
docker/azure/: Dockerfile  rustic-example-template.yaml
docker/proxy/: Dockerfile
docker/proxy/etc/: envoy.yaml
docker/rust/: Dockerfile
docker/rust-nightly/: Dockerfile
docker/swagger/: Dockerfile
etc/: application-sample.yaml  secrets-sample.yaml  settings-sample+jeroen.sh  settings-sample.sh
present/: Dockerfile  Dockerfile-development  README.md  package-lock.json  package.json
present/etc/: conf.nginx  nginx.conf
present/src/: App.css  App.js  Greet.js  index.css
proto/: config.proto  dendrite_config.proto  grpc_example.proto  proto_dendrite_config.proto  proto_example.proto
src/: application.rs  lib.rs  main.rs
src/dendrite_config/: mod.rs
src/elastic_search_utils/: mod.rs
src/example_api/: mod.rs
src/example_command/: mod.rs
src/example_event/: auth.rs  elastic.rs  mod.rs  mongo.rs
src/example_query/: mod.rs
src/grpc_example/: mod.rs
