[package]
name = "dendrite_example"
version = "0.1.0"
authors = ["Jeroen van Maanen"]
edition = "2018"
description = "Event Sourcing and CQRS in Rust with AxonServer: Example project."
readme = "README.md"
homepage = "https://github.com/dendrite2go/archetype-rust-axon"
repository = "https://github.com/dendrite2go/archetype-rust-axon"
license = "MIT"
keywords = ["event-sourcing", "CQRS", "AxonServer"]
categories = ["web-programming"]
include = ["/src/**/*", "/proto/**/*", "/Cargo.*", "/build.rs", "/README.md", "/LICENSE"]

[dependencies]
anyhow = "1.0"
async-stream = "0.3.0"
base64 = "0.13.0"
bytes = "0.5"
dendrite = "0.1.1"
elasticsearch = "7.10.0-alpha.1"
env_logger = "0.7.1"
futures-core = "0.3.8"
futures-util = "0.3.5"
log = "0.4.11"
serde = "~1"
serde_json = "~1"
sha2 = "0.9.2"
tokio = { version = "0.2", features = ["macros","time"] }
tonic = "0.3.1"
prost = "0.6"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = "0.2"
