[package]
name = "dendrite_example"
version = "0.1.0"
authors = ["Jeroen van Maanen"]
edition = "2018"
description = "Event Sourcing and CQRS in Rust with AxonServer: Example project."
readme = "README.md"
homepage = "https://github.com/dendrite2go/archetype-rust-axon"
repository = "https://github.com/dendrite2go/archetype-rust-axon"
license = "MIT"
keywords = ["event-sourcing", "CQRS", "AxonServer"]
categories = ["web-programming"]
include = ["/src/**/*", "/proto/**/*", "/Cargo.*", "/build.rs", "/README.md", "/LICENSE"]

[dependencies]
anyhow = "1.0"
async-lock = "^2.3"
async-stream = "^0.3"
base64 = "0.13.0"
bytes = "^1.0"
dendrite = "0.3.0" # { path = "../rustic-dendrite" } #
dendrite_macros = "0.1.0" # { path = "../rustic-dendrite-macros" } #
elasticsearch = "7.10.1-alpha.1"
env_logger = "0.7.1"
futures-core = "^0.3"
futures-util = "^0.3"
log = "^0.4"
serde = "~1"
serde_json = "~1"
sha2 = "0.9.2"
tokio = { version = "^1.0", features = ["macros","rt-multi-thread","time"] }
tonic = "^0.4"
prost = "^0.7"
uuid = { version = "^0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "^0.4"
