[package]
name = "dendrite_example"
version = "0.1.0"
authors = ["Jeroen van Maanen"]
edition = "2018"
description = "Event Sourcing and CQRS in Rust with AxonServer: Example project."
readme = "README.md"
homepage = "https://github.com/dendrite2go/archetype-rust-axon"
repository = "https://github.com/dendrite2go/archetype-rust-axon"
license = "MIT"
keywords = ["event-sourcing", "CQRS", "AxonServer"]
categories = ["web-programming"]
include = ["/src/**/*", "/proto/**/*", "/Cargo.*", "/build.rs", "/README.md", "/LICENSE"]

[dependencies]
anyhow = "1.0"
async-channel = "^2.1"
async-lock = "^3.0"
async-stream = "^0.3"
base64 = "^0.21"
bytes = "^1.0"
dendrite = { features = ["all"], version = "^0.13" } # path = "../dendrite/dendrite", #
elasticsearch = "7.14.0-alpha.1"
env_logger = "^0.10"
futures-core = "^0.3"
futures-util = "^0.3"
jwt = "^0.16"
lazy_static = "^1.4"
log = "^0.4"
mongodb = { version = "^2.3", features = ["bson-serde_with"] }
pem = "^3.0"
rand_core = "^0.6"
rsa = "^0.9"
serde = "~1"
serde_json = "~1"
sha2 = { version = "^0.10", features = ["oid"] }
sshkeys = "^0.3"
strum = "^0.25"
strum_macros = "^0.25"
tokio = { version = "^1.0", features = ["macros","rt-multi-thread","time","signal"] }
tonic = "^0.8"
prost = "^0.11"
uuid = { version = "^1.2", features = ["v4"] }

[build-dependencies]
tonic-build = "^0.8"
